# AI-BI-Workspace

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
backend/: main.py
backend/app/api/routes/: __init__.py  chat_routes.py  dashboard_routes.py  dataset_routes.py  job_routes.py  llm_routes.py
backend/app/application/datasource_use_cases/: import_file_dataset.py
backend/app/domain/dataset/: entities.py
backend/app/infrastructure/: settings.py
backend/app/infrastructure/analysis/: ai_analysis_planner.py
backend/app/infrastructure/catalog/: dataset_catalog.py
backend/app/infrastructure/chat/: chat_history_store.py  chatbi_service.py
backend/app/infrastructure/cleaning/: dataset_cleaning_service.py
backend/app/infrastructure/jobs/: job_store.py
backend/app/infrastructure/llm/: agent_skills.py  llm_client.py
backend/app/infrastructure/profiling/: parquet_profiler.py  semantic_layer.py
backend/tests/fixtures/: sales.csv
backend/tests/unit/: test_ai_analysis_planner.py  test_chat_history_store.py  test_chatbi_suggestions.py  test_dashboard_generator.py  test_dataset_catalog.py  test_dataset_cleaning_service.py  test_duckdb_query_engine.py  test_echarts_spec_repair.py  test_job_background_tasks.py  test_job_store.py  test_llm_routes.py  test_local_dataset_store.py  test_parquet_profiler.py
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  router.ts  styles.css
frontend/src/api/: chatApi.ts  datasetApi.ts
(+11 files in other folders)
