[project]
name = "ai-powered-data-analyst"
version = "0.1.0"
description = "Automated multi-agent data analysis system"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "duckdb>=1.1.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=17.0.0,<18.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "tenacity>=8.5.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["venv", ".venv"]
